@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/create-iso.sh,v 1.19 2005/12/16 18:57:57 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/create-iso.sh,v 1.20 2006/01/10 15:40:57 wolf31o2 Exp $
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
 
@@ -63,7 +63,7 @@ then
 				sh)
 					clst_iso_volume_id="Gentoo Linux - SH"
 				;;
-				sparc)
+				sparc|sparc64)
 					clst_iso_volume_id="Gentoo Linux - SPARC"
 				;;
 				x86)
@@ -148,7 +148,7 @@ case ${clst_mainarch} in
 			;;
 		esac
 	;;
-	sparc)
+	sparc|sparc64)
 		# Old silo + patched mkisofs fubar magic
 		# Only silo 1.2.x seems to work for most hardware
 		# Seems silo 1.3.x+ breaks on newer machines
